Closed Bug 1752265 Opened 2 years ago Closed 2 years ago

LSNG: Empty values can't be persisted

Categories

(Core :: Storage: localStorage & sessionStorage, defect, P1)

defect

Tracking

()

RESOLVED FIXED
98 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox96 --- unaffected
firefox97 + fixed
firefox98 + fixed

People

(Reporter: janv, Assigned: jjalkanen)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

No description provided.

[Tracking Requested - why for this release]: Easy to trip over regression from bug 1681300.

Has Regression Range: --- → yes
Attachment #9261028 - Attachment description: Bug 1752265 - Allow null blobs to avoid constraint violations. r=#dom-storage-reviewers → Bug 1752265 - Prevent conversion of empty values to nulls on bind. r=#dom-storage-reviewers
Pushed by jjalkanen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/25673139c9d8
Prevent conversion of empty values to nulls on bind. r=dom-storage-reviewers,janv

Comment on attachment 9261028 [details]
Bug 1752265 - Prevent conversion of empty values to nulls on bind. r=#dom-storage-reviewers

Beta/Release Uplift Approval Request

  • User impact if declined: Inserting empty values in local storage will fail in all builds and the nightly build will crash due to debug asserts.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch handles empty values as a special case, otherwise nothing changes.
  • String changes made/needed: None
Attachment #9261028 - Flags: approval-mozilla-beta?
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch

Comment on attachment 9261028 [details]
Bug 1752265 - Prevent conversion of empty values to nulls on bind. r=#dom-storage-reviewers

Fixes an easily-hit LS regression introduced in Fx97. Approved for 97.0rc1. Thanks for including a test.

Attachment #9261028 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Sqlite ALTER TABLE statement documentation makes recommendations under
section about making other kinds of table schema changes.

Comment on attachment 9262634 [details]
Bug 1752265 - Perform schema change using recommended steps. r=#dom-storage-reviewers

Revision D138006 was moved to bug 1748260. Setting attachment 9262634 [details] to obsolete.

Attachment #9262634 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: