Bug 1752265 - Prevent conversion of empty values to nulls on bind. r=janv, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D135597